# siege

./: .dockerignore  .env.example  .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
configs/: default.yaml  gpu.yaml
data/: episodes.jsonl  prompts.jsonl
demos/: demo_arena_transcript.py  sample_transcript.md
deploy/huggingface/: DEPLOY.md  README.md
interp_arena/: README.md  __init__.py
interp_arena/agents/: __init__.py  base.py  blue_agent.py  llm_blue_agent.py  llm_red_agent.py  red_agent.py
interp_arena/env/: __init__.py  actions.py  arena.py  rewards.py  state.py  transitions.py
interp_arena/model/: __init__.py  hooks.py  lm.py  safety.py  steering.py
interp_arena/tracker/: __init__.py  wandb_logger.py
interp_arena/training/: __init__.py  config.py  unsloth_inspect.py
notebooks/: gen_notebook.py
scripts/: train.py  train_grpo.py
server/: Dockerfile  app.py  interp_arena_environment.py  requirements.txt  web_playground.py
tests/: test_env.py
